--- a/sass/templates/_control.sass
+++ b/sass/templates/_control.sass
@@ -86,6 +86,7 @@
     flex-wrap: wrap
     max-width: 55rem
     margin: auto
+
   &__policy
     flex-basis: 100%
     margin-top: 1rem
@@ -95,6 +96,8 @@
       font-weight: normal
   &__input
     color: $dark
+    &::placeholder
+      color: $dark
     &:focus
       outline: none
   &__input__group
