--- a/sass/templates/_footer.sass
+++ b/sass/templates/_footer.sass
@@ -85,8 +85,10 @@
     &__phone
       margin-right: 45px
   &__map
-    margin-bottom: 4.8rem
+    padding-bottom: 4.8rem
     min-height: 465px  
+    max-width: 66rem
+    margin: auto
   .map
     &__heading
       margin: auto
@@ -103,14 +105,12 @@
       color: $primary
     .title
       &__icon
-        margin-right: 0.6rem
-    &__wrapper
-      max-width: 66rem
-      margin: auto
+        margin-right: 0.6rem    
   &__span-phone
     display: inline-block
     width: max-content
     color: $primary
     text-decoration: none
+  
 
     
