--- a/sass/templates/_media.sass
+++ b/sass/templates/_media.sass
@@ -527,5 +527,9 @@
   .footer__menu
     & .menu
         display: none
+  .footer__map
+    width: 100%
+  .ymaps-2-1-76-map
+    width: 100% !important
 
 
